# django-badges

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
badges/: listeners.py  managers.py  models.py  signals.py  urls.py  utils.py
badges/migrations/: 0001_initial.py  0002_auto_20150513_0429.py
test_project/: manage.py  settings.py  urls.py
