[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-badges"
version = "1.1.4"
authors = [
    {name = "James Robert"},
    {email = "jiaaro@gmail.com"}
]
description = "Stack Overflow style badges for django"
license = {text = "GPLv3"}
keywords = ["django", "badges", "social"]
urls = {homepage = "http://djangobadges.com"}
requires-python = ">=3.8"
dependencies = ["django>=4.1.3", "Pillow>=9.0.1"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Django",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

[tool.setuptools]
packages = ["badges", "badges.templatetags", "badges.migrations"]

[tool.setuptools.package-data]
badges = ["badges/templates/badges/*.html"]